Use java 20 as Maven POM release.